src/test/ui/generic-associated-types/unsatisfied-outlives-bound.stderr
error[E0477]: the type `&'b ()` does not fulfill the required lifetime
  --> $DIR/unsatisfied-outlives-bound.rs:6:21
   |
LL |     type Item<'a> = &'b ();
   |                     ^^^^^^
   |
note: type must outlive the lifetime `'a` as defined here as required by this binding
  --> $DIR/unsatisfied-outlives-bound.rs:6:15
   |
LL |     type Item<'a> = &'b ();
   |               ^^

error[E0477]: the type `&'a ()` does not fulfill the required lifetime
  --> $DIR/unsatisfied-outlives-bound.rs:15:21
   |
LL |     type Item<'a> = &'a ();
   |                     ^^^^^^
   |
note: type must satisfy the static lifetime as required by this binding
  --> $DIR/unsatisfied-outlives-bound.rs:11:20
   |
LL |     type Item<'a>: 'static;
   |                    ^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0477`.
